--- a/Tesla_stock_price_prediction.ipynb
+++ b/Tesla_stock_price_prediction.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv('C:/Users/91756/Downloads/TSLA.csv')\n",
+    "df = pd.read_csv('Replace with ur path')\n",
     "\n"
    ]
   },
@@ -133,6 +133,52 @@
     "# Reshape input for LSTM\n",
     "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
     "X_test = X_test.reshape(X_test.shape[0], X_test.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) ', 'for plot_model/model_to_dot to work.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.utils import plot_model\n",
+    "\n",
+    "# Create the enhanced LSTM model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(50, return_sequences=True, input_shape=(time_step, 1)))\n",
+    "model.add(LSTM(50, return_sequences=True))\n",
+    "model.add(LSTM(50))\n",
+    "model.add(Dense(1))\n",
+    "model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "\n",
+    "# Plot and save the model architecture\n",
+    "plot_model(model, to_file='model_architecture.png', show_shapes=True, show_layer_names=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pydot in c:\\users\\91756\\anaconda3\\envs\\gputest\\lib\\site-packages (1.4.2)\n",
+      "Requirement already satisfied: pyparsing>=2.1.4 in c:\\users\\91756\\anaconda3\\envs\\gputest\\lib\\site-packages (from pydot) (3.1.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pydot"
    ]
   },
   {
